--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Lab 2</title>
+</head>
+<h1>Welcome to My Page!</h1>
+<body>
+  <article>
+    <section><strong>About Me!</strong>
+      <p>Short Bio</p>
+      <p>My name is Frank Iriarte (JR) and I was born in El Paso, TX. I've moved all around the US. I've lived in quite a few states, and overseas as well. I'm currently learning to code.</p>
+    </section>
+      <section><strong>Education</strong>
+        <ul>
+          <li>Renton High</li>
+          <li>Auburn High</li>
+          <li>University of Washington</li>
+        </ul>
+      </section>
+      <section><strong>Job Experience</strong>
+        <ul>
+          <li>Bartender</li>
+          <li>Management</li>
+      </ul>
+      </section>
+      <section><strong>Goals</strong>
+        <ul>
+          <li>Help others</dt>
+          <li>Learn to code!</li>
+          <li>Get a Job</li>
+      </ul>
+      </section>
+  </article>
+  <script src="app.js" type="text/javascript"></script>
+</body>
+<footer>Thanks for looking
+</footer>
 </html>
