fixed last question to save variable for 6th question on YES answer. html is up to date with new footer. maybe add more to the body?

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   </article>
   <script src="app.js" type="text/javascript"></script>
 </body>
-<footer>Thanks for looking
+<footer><em><strong>I need a job!!!!</strong></em>
 </footer>
 </html>
