fixed typos in javascript complement to compliment. changed answer in console log. index was changed to reflect change in job experience

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <ul>
           <li>Bartender</li>
           <li>Management</li>
+          <li>Anything to do with bars and restaurants</li>
       </ul>
       </section>
       <section><strong>Goals</strong>
