added script tag and q1. Both in working order

--- a/guessing-game.html
+++ b/guessing-game.html
@@ -24,6 +24,6 @@
 
     <p id = "ques-seven">how old do you think I am?</p>
     <p id = "ans-seven"></p>
-
+    <script src="app.js"></script>
   </body>
 </html>
